// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export_default_call_expression.coffee 1`] = `
export default foo()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
export default foo()

`;

exports[`export_default_class_declaration.coffee 1`] = `
export default class Foo
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
export default class Foo

`;

exports[`export_default_class_expression.coffee 1`] = `
export default (class foobar)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
export default (class foobar)

`;

exports[`export_default_function.coffee 1`] = `
export default ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
export default ->

`;

exports[`export_default_new_expression.coffee 1`] = `
export default new Foo()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
export default new Foo()

`;
